# ReleasePulse

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  compose.yaml  kind-config.yaml  pyproject.toml
.github/workflows/: notify-releasepulse.yml
deploy/argocd/: application.yaml
deploy/github-actions/: README.md
deploy/grafana/: grants.sql  views.sql
deploy/grafana/provisioning/dashboards/: dashboards.yaml
deploy/grafana/provisioning/datasources/: postgres.yaml
deploy/helm/releasepulse/: Chart.yaml  values.yaml
deploy/helm/releasepulse/dashboards/: platform-health.json  service-health.json  slo.json
docs/: slos.md
docs/runbooks/: README.md  alerts-not-firing.md  db-restore.md  failure-simulations.md  false-positive-regression.md  worker-not-producing-checks.md
migrations/: env.py
migrations/versions/: a1b2c3d4e5f6_add_webhook_deliveries.py  e96f69f637c4_initial_schema.py
releasepulse/: config.py  db.py  ingestion.py  metrics.py  models.py
releasepulse/alerting/: dispatch.py  sender.py
releasepulse/api/: deps.py  main.py  schemas.py  webhook_auth.py
releasepulse/api/routers/: deployments.py  endpoints.py  services.py
releasepulse/demo/: service.py
releasepulse/detector/: __init__.py  core.py  service.py
releasepulse/security/: ssrf.py
releasepulse/worker/: __init__.py  check.py  http.py  runner.py
scripts/: notify_releasepulse.sh
tests/: conftest.py  test_alerting.py  test_api_ops.py  test_detector_core.py  test_detector_service.py  test_e2e.py  test_grafana_views.py  test_harness.py  test_ingestion.py  test_metrics.py  test_ssrf.py  test_webhook_hmac.py  test_worker_autoeval.py  test_worker_check.py  test_worker_http.py  test_worker_runner.py
(+30 files in other folders)
