[project]
name = "releasepulse"
version = "0.1.0"
description = "Release-health platform: links deployments to production behavior and flags post-deploy regressions."
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "fastapi>=0.138.1",
    "uvicorn[standard]>=0.49.0",
    "pydantic-settings>=2.14.2",
    "httpx>=0.28.1",
    "apscheduler>=3.11.2",
    "prometheus-client>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["releasepulse"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # Starlette's TestClient uses httpx internally and warns that a future
    # version will switch to httpx2. It's a third-party deprecation we can't act
    # on; scoped to this exact message so real warnings still surface.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
